--- a/src/main/resources/templates/book-cat.html
+++ b/src/main/resources/templates/book-cat.html
@@ -20,14 +20,17 @@
   <!-- logo & icon區 start -->
   <header>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container-fluid">
-          <div>
-            <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
-          </div>
-          <div class="icon-3 order-num">
-            <li sec:authorize="${isAuthenticated()}" class="user-none">
-              <a href="javascript:void(0);">
-              <img src="/static/css/icon/user.svg" width="33px" class="user">
+      <div class="container-fluid">
+        <div>
+          <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
+        </div>
+        <div class="icon-3 order-num">
+          <li sec:authorize="${isAuthenticated()}" class="user-none">
+            <a href="javascript:void(0);">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              </svg>
               <p sec:authentication="name"></p>
             </a>
             <ul class="list-group hide">
@@ -36,20 +39,33 @@
               <li class="list-group-item"><a href="/logout">登出</a></li>
             </ul>
           </li>
-            <li sec:authorize="${!isAuthenticated()}" class="login-none"><a href="/login">
-              <img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-            <li>
-              <p class="order-number">0</p>
-              <a href="cart.html">
-              <img src="/static/css/icon/cart.svg" width="25px" class="cart">
+          <li sec:authorize="${!isAuthenticated()}" class="login-none">
+            <a href="/login">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
+              <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
+              <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
+            </svg>
             </a>
           </li>
-            <li><a href="message.html"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
-          </div>
-          </ul>
+          <li>
+            <p class="order-number">0</p>
+            <a href="cart.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              </svg>
+            </a>
+          </li>
+          <li><a href="message.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+              <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+            </svg>
+          </a>
+        </li>
         </div>
+        </ul>
       </div>
-</header>  
+    </div>
+  </header>
   <!--logo & icon區 end -->
 
   <!-- 導覽列 start -->
@@ -128,7 +144,8 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb alig">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page"><span th:if="${category!=null}" th:text="${category}"></span></li>
+        <li class="breadcrumb-item active" aria-current="page"><span th:if="${category!=null}"
+            th:text="${category}"></span></li>
       </ol>
     </nav>
   </div>
@@ -137,7 +154,7 @@
   <!--------------------title start----------------------------->
   <div class="title">
     <h3><span th:text="${category}==null ? '搜尋與 \''+ ${keyword} +'\' 有關的項目' : ${category.toUpperCase()}"></span></h3>
-<!--    <h3><span th:if="${category!=null}" th:text="${category.toUpperCase()}" ></span></h3>-->
+    <!--    <h3><span th:if="${category!=null}" th:text="${category.toUpperCase()}" ></span></h3>-->
   </div>
   <!--------------------title end---------------------------->
 
@@ -145,17 +162,17 @@
   <div class="container">
     <div class="row">
       <!-- book template -->
-<!--      <div class="col-12 col-sm-6 col-md-4 col-lg-3">-->
-<!--        <div class="card">-->
-<!--          <img class="card-img-top" src="/static/img/books/f01.jpg" alt="Paul Gauguin 1848-1903">-->
-<!--          <div class="card-body">-->
-<!--            <p class="card-text">Paul Gauguin</p>-->
-<!--            <p><strong>NT 700</strong></p>-->
-<!--            <button type="button" class="btn btn-outline-dark">more</button>-->
-<!--            <button type="button" class="btn btn-outline-danger">Add to Cart</button>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
+      <!--      <div class="col-12 col-sm-6 col-md-4 col-lg-3">-->
+      <!--        <div class="card">-->
+      <!--          <img class="card-img-top" src="/static/img/books/f01.jpg" alt="Paul Gauguin 1848-1903">-->
+      <!--          <div class="card-body">-->
+      <!--            <p class="card-text">Paul Gauguin</p>-->
+      <!--            <p><strong>NT 700</strong></p>-->
+      <!--            <button type="button" class="btn btn-outline-dark">more</button>-->
+      <!--            <button type="button" class="btn btn-outline-danger">Add to Cart</button>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
       <div th:each="book:${books}" class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="card">
           <img class="card-img-top" th:src="${book.imageUrl}" th:alt="${book.name}">
@@ -174,15 +191,15 @@
 
   <div class="observer" style="border: 1px solid transparent"></div>
 
-   <!-- footer 區 start -->
-   <footer>
+  <!-- footer 區 start -->
+  <footer>
     <div class="co">
       <span>Copyright &copy; 2021 <a class="backhome" href="/"><strong>BookLand</strong></a>
       </span>
     </div>
   </footer>
   <!-- footer 區 end -->
-  
+
   <!-- third parties -->
   <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
@@ -198,13 +215,13 @@
   <script>
     $('.user-none').hover(() => $('.user-none .hide').toggle())
   </script>
-<!-- loading 圖示 start  -->
-<div class="load-item hide">
-  <div class="load-pic">
-    <img src="/static/css/icon/colorbook-load.png" class="book-p">
+  <!-- loading 圖示 start  -->
+  <div class="load-item hide">
+    <div class="load-pic">
+      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+    </div>
   </div>
-</div>
-<!-- loading 圖示 end  -->
+  <!-- loading 圖示 end  -->
 
 </body>
 
