--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -143,17 +143,29 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/static/img/banner3.jpg" alt="Paul Cezanne">
+        <a href="javascript:void(0);">
+        <img class="d-block w-100" src="/static/img/banner1.jpg" alt="Edouard Vuillard">
+      </a>
       </div>
       <div class="carousel-item">
+        <a href="/book/insidepage/paul-c-zanne">
+        <img class="d-block w-100" src="/static/img/banner3.jpg" alt="Paul Cézanne">
+        </a>
+      </div>
+      <div class="carousel-item trans-txt">
+        <a href="javascript:void(0);">
+        <p class="as-txt">Alfred Stieglitz</p>
         <img class="d-block w-100" src="/static/img/banner6.jpg" alt="Alfred Stieglitz">
+      </a>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="/static/img/banner7.jpg" alt="John Ritto Penniman">
       </div>
+      
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -172,9 +184,9 @@
   </div>
   <div class="container news">
     <div class="row">
-      <div class="col-12 col-sm-4">
+      <div class="col-12  col-md-4">
         <div class="card" style="width:100%;padding:10px 10px 0px 10px;">
-          <img class="card-img-top" src="/static/img/books/f01.jpg" alt="Paul Gauguin_bookcover">
+          <img class="card-img-top" src="/static/img/f01-index.jpg" alt="Paul Gauguin_bookcover">
           <div class="card-body">
             <h5>Paul Gauguin <small>1848-1903</small></h5>
             <p class="card-text">
@@ -189,7 +201,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-8">
+      <div class="col-12  col-md-8">
         <div class="card" style="width:100%;">
           <img class="card-img-top" src="/static/img/news_himid.png" alt="Lubaina Himid_exhibition_message">
           <div class="card-body">
