--- a/src/main/resources/templates/book-cat.html
+++ b/src/main/resources/templates/book-cat.html
@@ -10,10 +10,35 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/model-css.css">
   <link rel="stylesheet" href="/static/css/bpage.css">
 
   <title>BookLand Bookshop</title>
+
+  <style>
+    .message-box {
+      position: fixed;
+      bottom: 5%;
+      left: 50%;
+      width: 200px;
+      height: 35px;
+      color: #fff;
+      text-align: center;
+      transform: translateX(-50%);
+      background-color: #28a745;
+      border-radius: 5px;
+      box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+      transition: opacity 1s;
+      z-index: 1;
+      opacity: 0;
+    }
+
+    .message-box div {
+      display: inline-block;
+      margin: auto;
+    }
+  </style>
 </head>
 
 <body>
@@ -47,8 +72,12 @@
             </svg>
             </a>
           </li>
-          <li>
-            <p class="order-number">0</p>
+          <li class="list-cart">
+            <p th:each="cookie:${#httpServletRequest.getCookies()}"
+               th:if="${cookie.getName().equals('cart')}"
+               th:class="'order-number'"
+               th:text="${cookie.getValue().split(',').length}"></p>
+
             <a href="cart.html">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -180,7 +209,7 @@
             <p class="card-text"><span th:text="${book.name}"></span></p>
             <p><strong>NT <span th:text="${book.price}"></span></strong></p>
             <a th:href="${'/book/insidepage/'+book.slug}" class="btn btn-outline-dark">more</a>
-            <button type="button" class="btn btn-outline-danger">Add to Cart</button>
+            <a th:href="'/cart/add?id='+${book.id}" class="btn btn-outline-danger btn-cart">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -200,12 +229,30 @@
   </footer>
   <!-- footer 區 end -->
 
+  <!-- loading 圖示 start  -->
+  <div class="load-item hide">
+    <div class="load-pic">
+      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+    </div>
+  </div>
+  <!-- loading 圖示 end  -->
+
+  <!-- message box start  -->
+  <div class="message-box">
+    <div>
+      <i class="bi-cart-check"></i>
+      <small>&nbsp;已新增至購物車</small>
+    </div>
+  </div>
+  <!-- message box end  -->
+
   <!-- third parties -->
   <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
   <!-- local js files -->
+  <script src="/static/js/global.js"></script>
   <script src="/static/js/config.js"></script>
   <script src="/static/js/helpers.js"></script>
   <script src="/static/js/views/view.js"></script>
@@ -215,14 +262,6 @@
   <script>
     $('.user-none').hover(() => $('.user-none .hide').toggle())
   </script>
-  <!-- loading 圖示 start  -->
-  <div class="load-item hide">
-    <div class="load-pic">
-      <img src="/static/css/icon/colorbook-load.png" class="book-p">
-    </div>
-  </div>
-  <!-- loading 圖示 end  -->
-
 </body>
 
 
