新增 insidepage.html 新增至購物車功能
1. 為避免重複邏輯，新增 cartView.js 讓底下類別去繼承

--- a/src/main/resources/templates/book-cat.html
+++ b/src/main/resources/templates/book-cat.html
@@ -256,6 +256,7 @@
   <script src="/static/js/config.js"></script>
   <script src="/static/js/helpers.js"></script>
   <script src="/static/js/views/view.js"></script>
+  <script src="/static/js/views/cartView.js"></script>
   <script src="/static/js/views/bookView.js"></script>
   <script src="/static/js/models/bookModel.js"></script>
   <script src="/static/js/controllers/bookController.js"></script>
