--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -32,7 +32,7 @@
               <p sec:authentication="name"></p>
             </a>
             <ul class="list-group hide">
-              <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
+              <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
               <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
               <li class="list-group-item"><a href="/logout">登出</a></li>
             </ul>
