--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/model-css.css">
   <link rel="stylesheet" href="/static/css/login.css">
 
@@ -285,6 +286,15 @@
     </div>
   </div>
   <!-- loading 圖示 end  -->
+
+  <!-- message box start  -->
+  <div class="message-box">
+    <div>
+      <i class="bi-person-check-fill"></i>
+      <small>&nbsp;註冊成功</small>
+    </div>
+  </div>
+  <!-- message box end  -->
   
 </body>
 
