--- a/src/main/resources/static/css/model-css.css
+++ b/src/main/resources/static/css/model-css.css
@@ -283,3 +283,30 @@ footer .co .backhome{
     }  
 }
 /* loading 圖示 end */
+
+/* message box start */
+.message-box {
+    position: fixed;
+    bottom: 5%;
+    left: 50%;
+    width: 200px;
+    height: 35px;
+    color: #fff;
+    text-align: center;
+    transform: translateX(-50%);
+    background-color: #28a745;
+    border-radius: 5px;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+    transition: opacity 1s;
+    z-index: 1;
+    opacity: 0;
+  }
+
+  .message-box div {
+    display: inline-block;
+    margin: auto;
+    font-family:"微軟正黑體","黑體","宋體",sans-serif; 
+    line-height: 35px;
+  }
+  
+/*  message box end  */
