--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/model-css.css">
   <link rel="stylesheet" href="/static/css/account.css">
 
@@ -406,6 +407,15 @@
   </div>
 </div>
 <!-- loading 圖示 end  -->
+
+<!-- message box start  -->
+<div class="message-box">
+  <div>
+    <i class="bi-folder-plus"></i>
+    <small>&nbsp;資料已儲存成功</small>
+  </div>
+</div>
+<!-- message box end  -->
 
 </body>
 
