--- a/src/main/resources/templates/newpass.html
+++ b/src/main/resources/templates/newpass.html
@@ -10,6 +10,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/model-css.css">
   <link rel="stylesheet" href="/static/css/newpass.css">
 
@@ -200,6 +201,15 @@
   </div>
 </div>
 <!-- loading 圖示 end  -->
+
+<!-- message box start  -->
+<div class="message-box">
+  <div>
+    <i class="bi-folder-plus"></i>
+    <small>&nbsp;密碼已更新成功</small>
+  </div>
+</div>
+<!-- message box end  -->
 
 </body>
 
