--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -45,9 +45,12 @@
               </svg>
             </a>
           </li>
-            <li>
-              <p class="order-number">0</p>
-              <a href="cart.html">
+            <li class="list-cart">
+              <p th:each="cookie:${#httpServletRequest.getCookies()}"
+                 th:if="${cookie.getName().equals('cart')}"
+                 th:class="'order-number'"
+                 th:text="${cookie.getValue().split(',').length}"></p>
+              <a href="/cart">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                   <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                 </svg>
@@ -442,24 +445,26 @@
   </footer>
 <!---------footer--end----------------->
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- loading 圖示 start  -->
+  <div class="load-item hide">
+    <div class="load-pic">
+      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+    </div>
+  </div>
+  <!-- loading 圖示 end  -->
+
+  <!-- third parties -->
   <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
   <!-- 會員帳號管理 icon button -->
-<script>
-  $('.user-none').hover(() => $('.user-none .hide').toggle())
-</script>
+  <script>
+    $('.user-none').hover(() => $('.user-none .hide').toggle())
+  </script>
 
-<!-- loading 圖示 start  -->
-<div class="load-item hide">
-  <div class="load-pic">
-    <img src="/static/css/icon/colorbook-load.png" class="book-p">
-  </div>
-</div>
-<!-- loading 圖示 end  -->
+  <!-- local js files -->
+  <script src="/static/js/global.js"></script>
 
 </body>
 </html>
