--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -47,9 +47,12 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <p class="order-number">0</p>
-              <a href="cart.html">
+            <li class="list-cart">
+              <p th:each="cookie:${#httpServletRequest.getCookies()}"
+                 th:if="${cookie.getName().equals('cart')}"
+                 th:class="'order-number'"
+                 th:text="${cookie.getValue().split(',').length}"></p>
+              <a href="/cart">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                   <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                 </svg>
@@ -147,95 +150,85 @@
         <div class="dropdown-divider bow"></div>
 
         <!-- 購物車為空之樣式 start -->
-        <div class="cart-empty">
+        <div th:class="${items eq null} ? 'cart-empty' : 'cart-empty hide'">
           <p>您的購物車是空的</p>
         </div>
         <!-- 購物車為空之樣式 end -->
 
         <!-- 第一本書明細 start -->
         <!-- 購物車不為空之樣式 start -->
-        <div class="cart-item cart-v">
-          <div class="bcov-text">
-            <a href="javascript:void(0);"><img src="/static/img/s_books/d01.jpg"></a>
-            <p class="bookname">Poster Calendar</p>
-          </div>
-          <div class="price">
-            <p class="unit-price">
-              <b>
-                <span class="money">
-                  <p><small>NT</small></p>
-                  <p>580</p>
-                </span>
-              </b>
-            </p>
-            <p class="quantity">
-              <span class="x">x</span>
-              <input class="input-qty" name="cart" value="1" min="0" max="5" type="number" id="form-cart">
-            </p>
-          </div>
-          <div class="amount-price">
-            <p>
-              <b>
-                <span class="money">
-                  <p><small>NT </small></p>
-                  <p>580</p>
-                </span>
-              </b>
-            </p>
-          </div>
-          <div class="actions">
-            <a href="javascript:void(0);">
-              <li class="remove">&otimes;刪除</li>
-            </a>
-            <a href="javascript:void(0);">
-              <li class="move-to-wish-list"> &hearts; 收藏</li>
-            </a>
-          </div>
-        </div>
-        <!-- 第一本書明細 end -->
+<!--        <div class="cart-item cart-v">-->
+<!--          <div class="bcov-text">-->
+<!--            <a href="javascript:void(0);"><img src="/static/img/s_books/d01.jpg"></a>-->
+<!--            <p class="bookname">Poster Calendar</p>-->
+<!--          </div>-->
+<!--          <div class="price">-->
+<!--            <p class="unit-price">-->
+<!--              <b>-->
+<!--                <span class="money">-->
+<!--                  <p><small>NT</small></p>-->
+<!--                  <p>580</p>-->
+<!--                </span>-->
+<!--              </b>-->
+<!--            </p>-->
+<!--            <p class="quantity">-->
+<!--              <span class="x">x</span>-->
+<!--              <input class="input-qty" name="cart" value="1" min="0" max="5" type="number" id="form-cart">-->
+<!--            </p>-->
+<!--          </div>-->
+<!--          <div class="amount-price">-->
+<!--            <p>-->
+<!--              <b>-->
+<!--                <span class="money">-->
+<!--                  <p><small>NT </small></p>-->
+<!--                  <p>580</p>-->
+<!--                </span>-->
+<!--              </b>-->
+<!--            </p>-->
+<!--          </div>-->
+<!--          <div class="actions">-->
+<!--            <a href="javascript:void(0);">-->
+<!--              <li class="remove">&otimes;刪除</li>-->
+<!--            </a>-->
+<!--            <a href="javascript:void(0);">-->
+<!--              <li class="move-to-wish-list"> &hearts; 收藏</li>-->
+<!--            </a>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <!-- 第二本書明細 start -->
-        <div class="cart-item cart-v">
-          <div class="bcov-text">
-            <a href="javascript:void(0);"><img src="/static/img/s_books/m01.jpg" ></a>
-            <p class="bookname">gold(05/2021)</p>
-          </div>
-          <div class="price">
-            <p class="unit-price">
-              <b>
-                <span class="money">
-                  <p><small>NT</small></p>
-                  <p>300</p>
-                </span>
-              </b>
-            </p>
-            <p class="quantity">
-              <span class="x">x</span>
-              <input class="input-qty" name="cart" value="1" min="0" max="5" type="number" id="form-cart">
-            </p>
-          </div>
-          <div class="amount-price">
-            <p>
-              <b>
-                <span class="money">
-                  <p><small>NT</small></p>
-                  <p>300</p>
-                </span>
-              </b>
-            </p>
-          </div>
-          <div class="actions">
-            <a href="javascript:void(0);">
-              <li class="remove">&otimes;刪除</li>
-            </a>
-            <a href="javascript:void(0);">
-              <li class="move-to-wish-list">&hearts; 收藏</li>
-            </a>
+        <!-- 第一本書明細 end -->
+        <div th:if="${books}">
+          <div th:each="book, stat:${books}" class="cart-item cart-v" th:id="'cart-item-'+${book.id}">
+            <div class="bcov-text">
+              <a th:href="'/book/insidepage/'+${book.slug}"><img th:src="${book.imageUrl}"></a>
+              <p th:text="${book.name}" class="bookname"></p>
+            </div>
+            <div class="price">
+              <p class="unit-price">
+                <b><span class="money"><p><small>NT</small></p><p th:text="${book.price}"></p></span></b>
+              </p>
+              <p class="quantity">
+                <span class="x">x</span>
+                <input class="input-qty" name="cart" th:value="${items.get(book.id+'')}" min="0" max="5" type="number" id="form-cart">
+              </p>
+            </div>
+            <div class="amount-price">
+              <p>
+                <b><span class="money"><p><small>NT </small></p><p th:text="${items.get(book.id+'') * book.price}"></p></span></b>
+              </p>
+            </div>
+            <div class="actions">
+              <a href="javascript:void(0);">
+                <li class="remove">&otimes;刪除</li>
+              </a>
+              <a href="javascript:void(0);">
+                <li class="move-to-wish-list"> &hearts; 收藏</li>
+              </a>
+            </div>
           </div>
         </div>
-        <!-- 第二本書明細 end -->
         <div class="con-shop">
-          <a href="bookland_home.html">&larr; 繼續購物</a>
+          <a href="/">&larr; 繼續購物</a>
         </div>
       </div>
       <!-- 購物車不為空之樣式 end -->
@@ -376,29 +369,27 @@
 </footer>
 <!-- footer 區 end -->
 
+<!-- loading 圖示 start  -->
+<div class="load-item hide">
+  <div class="load-pic">
+    <img src="/static/css/icon/colorbook-load.png" class="book-p">
+  </div>
+</div>
 
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- third parties -->
   <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
   <!-- 會員帳號管理 icon button -->
   <script>
-    $('.user-none').hover(function(){
-      $('.hide').toggle();
-    })
+    $('.user-none').hover(() => $('.user-none .hide').toggle())
   </script>
- 
- <!-- loading 圖示 start  -->
- <div class="load-item">
-  <div class="load-pic">
-    <img src="/static/css/icon/colorbook-load.png" class="book-p">
-  </div>
-</div>
-<!-- loading 圖示 end  -->
+
+  <!-- local js files -->
+  <script src="/static/js/global.js"></script>
+  <script src="/static/js/config.js"></script>
+  <script src="/static/js/helpers.js"></script>
 
 </body>
 
