增加payapl結帳頁面

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -283,7 +283,9 @@
             </b>
           </div>
         </div>
+        <a href="checkout.html">
         <button type="button" class="btn btn-dark">結帳</button>
+      </a>
       </div>
     </div>
     <!-- 結帳小計 start -->
