--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -9,7 +9,9 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/model-css.css">
+  <link rel="stylesheet" href="/static/css/checkout.css">
 
   <title>BookLand Bookshop</title>
 </head>
@@ -25,9 +27,11 @@
         <div class="icon-3 order-num">
           <li sec:authorize="${isAuthenticated()}" class="user-none">
             <a href="javascript:void(0);">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                <path fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
               </svg>
               <!-- <img src="/static/css/icon/person-circle.svg" width="33px" class="user"> -->
               <p sec:authentication="name"></p>
@@ -40,9 +44,11 @@
           </li>
           <li sec:authorize="${!isAuthenticated()}" class="login-none">
             <a href="/login">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
-                <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
-                <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor"
+                class="bi bi-door-closed" viewBox="0 0 16 16">
+                <path
+                  d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z" />
+                <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z" />
               </svg>
               <!-- <img src="/static/css/icon/login.svg" width="30px" class="login"> -->
             </a>
@@ -50,20 +56,24 @@
           <li>
             <p class="order-number">0</p>
             <a href="cart.html">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
               </svg>
               <!-- <img src="/static/css/icon/cart.svg" width="25px" class="cart"> -->
             </a>
           </li>
-          <li> 
-            <a href="message.html"> 
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
-                <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+          <li>
+            <a href="message.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+                <path
+                  d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
               </svg>
-            <!-- <img src="/static/css/icon/msg3.svg" width="30px" class="msg"> -->
-          </a>
-        </li>
+              <!-- <img src="/static/css/icon/msg3.svg" width="30px" class="msg"> -->
+            </a>
+          </li>
         </div>
         </ul>
       </div>
@@ -140,6 +150,222 @@
     </nav>
   </navbar>
   <!-- 導覽列 end -->
+
+  <!-- 訂單總價 與 回購物車連結 區 start -->
+  <main>
+    <div class="totalprice-bar">
+      <div class="alert alert-info" role="alert">
+        <div class="backcart-bar">
+          <i class="bi-cart-fill"></i>
+          <a href="cart.html">回到購物車</a>
+        </div>
+        <div class="price-bar">
+          <p>TOTAL : <small>$</small></p>
+          <p class="t-price">&nbsp;1500</p>
+        </div>
+      </div>
+    </div>
+    <!-- 訂單總價 與 回購物車連結 區 end-->
+
+    <!-- 寄件資料 與 paypal付款 連結 區 start -->
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-6 s-info">
+          <h5><i class="bi-file-earmark-text"></i>&nbsp;Shipping information</h5>
+          <div class="info">
+            <!-- 收件人資料 start -->
+            <div class="accordion acc-top" id="accordionExample">
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <div class="mb-0">
+                    <div>
+                      <p><small>某某某</small></p>
+                    </div>
+                    <div>
+                      <button class="btn  text-left collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <p>Change Name?</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder="變更收件人姓名" aria-label="Recipient's username"
+                        aria-describedby="button-addon2">
+                      <div class="input-group-append">
+                        <button class="btn btn-danger" type="button" id="button-addon2"><i
+                            class="bi-person-check-fill"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 手機資料 start -->
+            <div class="accordion" id="accordionExample">
+              <div class="card ">
+                <div class="card-header" id="headingOne">
+                  <div class="mb-0">
+                    <div>
+                      <p><small>0913111000</small></p>
+                    </div>
+                    <div>
+                      <button class="btn  text-left collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <p>Change Phone?</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder="變更手機號碼" aria-label="Recipient's username"
+                        aria-describedby="button-addon2">
+                      <div class="input-group-append">
+                        <button class="btn btn-danger" type="button" id="button-addon2"><i
+                            class="bi-telephone-fill"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 地址資料 start -->
+            <div class="accordion" id="accordionExample">
+              <div class="card card-bottom">
+                <div class="card-header" id="headingThree">
+                  <div class="mb-0">
+                    <div class="address-txt">
+                      <p><small>台北市大安區仁愛路三段122號b1</small></p>
+                    </div>
+                    <div>
+                      <button class="btn  text-left collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <p>Change Address?</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder="變更收件地址" aria-label="Recipient's username"
+                        aria-describedby="button-addon2">
+                      <div class="input-group-append">
+                        <button class="btn btn-danger" type="button" id="button-addon2"><i
+                            class="bi-house-fill"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-6 c-pay">
+          <h5><i class="bi-credit-card"></i>&nbsp;Checkout</h5>
+          <div class="payment">
+            <div class="order-content">
+              <div class="order-item">
+                <h6>Order Summary</h6>
+                <table class="table table-bordered">
+                  <tbody>
+                    <tr>
+                      <td>Subtotal</td>
+                      <td>1420</td>
+                    </tr>
+                    <tr>
+                      <td>Qty</td>
+                      <td >2</td>
+                    </tr>
+                    <tr>
+                      <td>Shipping</td>
+                      <td>80</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <div class="order-totalprice">
+                  <div class="total-txt">
+                    <p>Total :</p>
+                  </div>
+                 <div class="total-prices">
+                   <p>$ 1500</p>
+                 </div>
+                </div>
+                <!-- modal button start-->
+                <div class="paypal-button">
+                  <button type="button" class="pay-btn" data-toggle="modal" data-target="#staticBackdrop">
+                    <img src="/static/css/icon/payapl.svg">
+                  </button>
+                </div>
+                 <!-- modal button end-->
+                <div class="card-pic">
+                  <img src="/static/css/icon/creditcard.svg">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- 寄件資料 與 paypal付款 連結 區 end -->
+
+  
+
+<!-- modal paypal 付款 彈出視窗 start -->
+<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <img src="/static/css/icon/paypal-blue.svg">
+        <h5 class="modal-title" id="staticBackdropLabel">
+          &nbsp;Payment Information</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h6>Card Details</h6>
+        <form>
+          <div class="form-row cardnum">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Card Number">
+              <span><small>&nbsp;Ex : 1111000011110000</small></span>
+            </div>
+          </div>
+          <div class="form-row carddate">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Month">
+              <span><small>&nbsp;Ex : 05</small></span>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Year">
+              <span><small>&nbsp;Ex : 2025</small></span>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="CSC">
+              <span><small>&nbsp;Ex : 000</small></span>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cancel</button>
+        <a href="javascriipt:void(0);"><button type="button" class="btn btn-outline-warning pay-btn-bo">
+            <img src="/static/css/icon/payapl-s.svg">
+        </button></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- modal paypal 付款 彈出視窗 end  -->
+
+
 
   <!-- loading 圖示 start  -->
   <div class="load-item hide">
