about 頁面完成/修改loading 圖示

--- a/src/main/resources/static/css/insidepage.css
+++ b/src/main/resources/static/css/insidepage.css
@@ -90,6 +90,9 @@
     font-weight: bold;
     margin-top: 10px;
 }
+.bi-bookmark-star-fill{
+    color:#dc3545;
+}
 /* 購書條款 end */
 
 /* 推薦書區 start */
