--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -346,9 +346,9 @@
                                 </div>
                                 <div class="order-footer">
                                   <img src="/static/css/icon/msg3.svg">
-                                  <p><a href="#">聯絡客服</a></p>
+                                  <p><a href="message.html">聯絡客服</a></p>
                                   <img src="/static/css/icon/print.svg">
-                                  <p><a href="#">列印明細</a></p>
+                                  <p><a href="javascript:void(0);">列印明細</a></p>
                                 </div>
                               </div>
                             </div>
@@ -392,10 +392,15 @@
   </script>
 
 <!-- loading 圖示 start  -->
-<div class="load-item hide">
-  <div class="load-pic">
-    <img src="/static/css/icon/colorbook-load.png" class="book-p">
-  </div>
+<div class="load-bgc hide">
+  <div class="load-item ">
+    <div class="load-pic">
+      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+    </div>
+    <div class="load-txt">
+      <small><i class="bi-hourglass-split"></i>&nbsp;Loading ...</small>
+    </div>
+  </div> 
 </div>
 <!-- loading 圖示 end  -->
 
