--- a/src/main/resources/templates/book-cat.html
+++ b/src/main/resources/templates/book-cat.html
@@ -207,11 +207,17 @@
   <!-- footer 區 end -->
 
   <!-- loading 圖示 start  -->
-  <div class="load-item hide">
-    <div class="load-pic">
-      <img src="/static/css/icon/colorbook-load.png" class="book-p">
-    </div>
+  <div class="load-bgc hide">
+    <div class="load-item ">
+      <div class="load-pic">
+        <img src="/static/css/icon/colorbook-load.png" class="book-p">
+      </div>
+      <div class="load-txt">
+        <small><i class="bi-hourglass-split"></i>&nbsp;Loading ...</small>
+      </div>
+    </div> 
   </div>
+  
   <!-- loading 圖示 end  -->
 
   <!-- message box start  -->
