--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/model-css.css">
   <link rel="stylesheet" href="/static/css/index.css">
   <title>BookLand Bookshop</title>
@@ -446,10 +447,15 @@
 <!---------footer--end----------------->
 
   <!-- loading 圖示 start  -->
-  <div class="load-item hide">
-    <div class="load-pic">
-      <img src="/static/css/icon/colorbook-load.png" class="book-p">
-    </div>
+  <div class="load-bgc hide">
+    <div class="load-item ">
+      <div class="load-pic">
+        <img src="/static/css/icon/colorbook-load.png" class="book-p">
+      </div>
+      <div class="load-txt">
+        <small><i class="bi-hourglass-split"></i>&nbsp;Loading ...</small>
+      </div>
+    </div> 
   </div>
   <!-- loading 圖示 end  -->
 
